fix: country page scrollbar

--- a/src/Pages/CountryPage/CountryPage.scss
+++ b/src/Pages/CountryPage/CountryPage.scss
@@ -5,10 +5,10 @@
   width: 100%;
   &__info-boxes {
     display: grid;
-    grid-template-columns: repeat(2, 50%);
+    grid-template-columns: repeat(2, 1fr);
     gap: 1rem;
     @media screen and (min-width: 768px) {
-      grid-template-columns: repeat(4, 25%);
+      grid-template-columns: repeat(4, 1fr);
     }
     transform: translateY(5%);
     opacity: 0;
